--- a/resources/css/Cart/get_list_cart.css
+++ b/resources/css/Cart/get_list_cart.css
@@ -23,6 +23,7 @@ main *{
     align-items: center;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     grid-template-columns: 60% repeat(4,1fr);
+    position: relative;
 }
 .info_item {
     padding-left: 30px;
@@ -96,7 +97,7 @@ main *{
     font-weight: bold;
 }
 
-/* .number{
+.number{
     display: flex;
     gap: 20px;
     justify-content: center;
@@ -116,9 +117,9 @@ main *{
     line-height: 30px;
 }
 
-.number div:first-child,.number div:last-child{
+.number .buttonupdate{
     cursor: pointer;
 }
-.number div:first-child:hover,.number div:last-child:hover{
+.number .buttonupdate:hover{
     background-color: rgb(203, 203, 203);
-} */
+}
